pkg/state/validate-listener-protocol-config.yaml
#
# OCI Native Ingress Controller
#
# Copyright (c) 2023 Oracle America, Inc. and its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-protocol-annotation-one
  namespace: default
  annotations:
    oci-native-ingress.oraclecloud.com/protocol: "HTTP2"
spec:
  rules:
  - http:
      paths:
      - pathType: Exact
        path: "/ProtocolPath"
        backend:
          service:
            name: test-protocol-annotation
            port:
              number: 900

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-protocol-annotation-two
  namespace: default
  annotations:
    oci-native-ingress.oraclecloud.com/protocol: "HTTP2"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/ProtocolPathPrefix"
        backend:
          service:
            name: test-protocol-annotation
            port:
              number: 900
