pkg/state/validate-mutual-tls-authentication.yaml
#
# OCI Native Ingress Controller
#
# Copyright (c) 2023 Oracle America, Inc. and its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mutual-authentication-annotation-one
  namespace: default
  annotations:
    oci-native-ingress.oraclecloud.com/mutual-tls-authentication: '[{"port": 80, "mode": "passthrough"}, {"port": 443, "mode": "verify","depth":1 }]'
spec:
  rules:
  - http:
      paths:
      - pathType: Exact
        path: "/HCPath"
        backend:
          service:
            name: test-health-checker-annotation
            port:
              number: 800
